--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa - Contacts</title>
+    <title>PyBursa04-Contacts</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -19,74 +19,71 @@
     <![endif]-->
   </head>
   <body>
+    <div class="container">
+      <div class="page-header">
+        <h1><span id="PythonLetter">PYT</span><span id="PythonOther">HON</span> <small><span id="PyDes">Web Development</span></small></h1>
+      </div>
+    </div>
+    <div class="container">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!--<a class="navbar-brand" href="#">Brand</a>-->
+          </div>
 
-<div class="container">
-  <div class="page-header">
-    <h1>PYTHON<small>web</small></h1>
-  </div>
-</div>
-
-<div class="container">
-    <ol class="breadcrumb">
-        <li class="active">Main</li>
-        <li>Contacts</li>
-    </ol>
-</div>
-
-<div class="container">
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">PyBursa04</a>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="index.html">Main</a></li>
+              <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+    <div class="container">
+      <div class="panel panel-default">
+        <div class="panel-heading"><h3><span id="Title">Director</span></h3></div>
+        <div class="panel-body">
+          <p id="Name">Name: <span id="NameDes">Lorem Ipsum</span></p>
+          <p id="Skype">Skype: <span id="SkypeDes">SkypeTestLogin</span></p>
+          <p id="Email">Email: <span id="EmailDes">Lorem@ipsum.com</span></p>
+          <p id="Phone">Phone: <span id="PhoneDes">+380999999999</span></p>
+        </div>
+      </div>
 
-</div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><h3><span id="Title">Manager</span></h3></h3>
+        </div>
+        <div class="panel-body">
+          <p id="Name">Name: <span id="NameDes">Lorem Ipsum</span></p>
+          <p id="Skype">Skype: <span id="SkypeDes">SkypeTestLogin</span></p>
+          <p id="Email">Email: <span id="EmailDes">Lorem@ipsum.com</span></p>
+          <p id="Phone">Phone: <span id="PhoneDes">+380999999999</span></p>
+        </div>
+      </div>
 
-<div class="container">
-    <h1>Director</h1>
-    <p>Name</p>
-    <p>Skype</p>
-    <p>Email</p>
-    <p>Phone</p>
-    <h1>Manager</h1>
-    <p>Name</p>
-    <p>Skype</p>
-    <p>Email</p>
-    <p>Phone</p>
-    <h1>Founder</h1>
-    <p>Name</p>
-    <p>Skype</p>
-    <p>Email</p>
-    <p>Phone</p>
-    <ul>
-       <li id='v11'>Textytext11</li>
-       <li id='v12'>Textytext12</li>
-       <li id='v13'>Textytext13</li>
-       <li id='v14'>Textytext14</li>
-       <li id='v15'>Textytext15</li>
-       <li id='v16'>Textytext16</li>
-       <li id='v17'>Textytext17</li>
-       <li id='v18'>Textytext18</li>
-       <li id='v19'>Textytext19</li>
-       <li id='v20'>Textytext20</li>
-     </ul>
-</div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><h3><span id="Title">Founder</span></h3></h3>
+        </div>
+        <div class="panel-body">
+          <p id="Name">Name: <span id="NameDes">Lorem Ipsum</span></p>
+          <p id="Skype">Skype: <span id="SkypeDes">SkypeTestLogin</span></p>
+          <p id="Email">Email: <span id="EmailDes">Lorem@ipsum.com</span></p>
+          <p id="Phone">Phone: <span id="PhoneDes">+380999999999</span></p>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
