--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa</title>
+    <title>PyBursa04</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -19,65 +19,61 @@
     <![endif]-->
   </head>
   <body>
+    <div class="container">
+      <div class="page-header">
+        <h1><span id="PythonLetter">PYT</span><span id="PythonOther">HON</span> <small><span id="PyDes">Web Development</span></small></h1>
+      </div>
+    </div>
+    <div class="container">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!--<a class="navbar-brand" href="#">Brand</a>-->
+          </div>
 
-<div class="container">
-  <div class="page-header">
-    <h1>PYTHON<small>web</small></h1>
-  </div>
-</div>
-
-<div class="container">
-    <ol class="breadcrumb">
-        <li>Main</li>
-        <li class="active">Contacts</li>
-    </ol>
-</div>
-
-<div class="container">
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">PyBursa04</a>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+              <li><a href="contact.html">Contacts</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-</div>
+    <div class="container">
+      <div class="well">
+        <h1><span id="Des">Description</span></h1>
+        <h2><span id="PBname">PyBursa</span></h2>
+        <p id="PyBursaText"><span id="Lor">Lorem ipsum</span> dolor sit amet, eu populo vituperata has. Id eos porro aeque disputationi, no est nisl scribentur consequuntur, nominati posidonium sed id. Vidisse eripuit pri eu, laoreet moderatius ad eam. Sed an quando viderer scripserit.
 
-<div class="container">
-  <div>
-    <h1>Description</h1>
-    <p>About Django...</p>
-    <h2>PyBursa</h2>
-  </div>
-    <h3>Program</h3>
+Sea cu altera intellegat accommodare, in sed mundi inermis moderatius. Accusam hendrerit at ius, nullam suscipit theophrastus an duo, cum ei postea bonorum dissentiet. Et iudico altera vivendo nec. Et qui melius inimicus. Eum illum persecuti cu.
 
-    <ul>
-      <li id='v1'>lecture1</li>
-      <li id='v2'>lecture2</li>
-      <li id='v3'>lecture3</li>
-      <li id='v4'>lecture4</li>
-      <li id='v5'>lecture5</li>
-      <li id='v6'>lecture6</li>
-      <li id='v7'>lecture7</li>
-      <li id='v8'>lecture8</li>
-      <li id='v9'>lecture9</li>
-      <li id='v10'>lecture10</li>
-    </ul>
-</div>
+Ad vim dico definitiones. Ius stet ancillae tincidunt ne, appareat appetere gloriatur in est. Fugit menandri reprimique ut eam. Te nullam adipisci mea, his fugit oportere et. Ei eam dicunt aeterno delectus, dico malorum vim at.
+
+Ut justo malis vocent mel, graecis dissentiet concludaturque ut sea. Nam nemore honestatis contentiones in. Per ne dicta placerat torquatos. No nam decore regione antiopam, recusabo mediocrem prodesset nam ut. Lorem docendi at cum.
+
+Nam ne copiosae delicata, id latine ornatus inciderint vel, eam ad modus inani necessitatibus. Ius tota adipisci inimicus ne, te utinam ponderum mea. Nec ex porro sanctus, ne duo minim utroque. Duo inani aliquam ne. Ut has audiam principes, purto utamur ea est.</p>
+        <h1><span id="Prg">Program</span></h1>
+        <p id="ProgramText"><span id="Lor">Lorem ipsum</span> dolor sit amet, eu populo vituperata has. Id eos porro aeque disputationi, no est nisl scribentur consequuntur, nominati posidonium sed id. Vidisse eripuit pri eu, laoreet moderatius ad eam. Sed an quando viderer scripserit.
+
+Sea cu altera intellegat accommodare, in sed mundi inermis moderatius. Accusam hendrerit at ius, nullam suscipit theophrastus an duo, cum ei postea bonorum dissentiet. Et iudico altera vivendo nec. Et qui melius inimicus. Eum illum persecuti cu.
+
+Ad vim dico definitiones. Ius stet ancillae tincidunt ne, appareat appetere gloriatur in est. Fugit menandri reprimique ut eam. Te nullam adipisci mea, his fugit oportere et. Ei eam dicunt aeterno delectus, dico malorum vim at.
+
+Ut justo malis vocent mel, graecis dissentiet concludaturque ut sea. Nam nemore honestatis contentiones in. Per ne dicta placerat torquatos. No nam decore regione antiopam, recusabo mediocrem prodesset nam ut. Lorem docendi at cum.
+
+Nam ne copiosae delicata, id latine ornatus inciderint vel, eam ad modus inani necessitatibus. Ius tota adipisci inimicus ne, te utinam ponderum mea. Nec ex porro sanctus, ne duo minim utroque. Duo inani aliquam ne. Ut has audiam principes, purto utamur ea est.</p>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
