--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,11 +18,8 @@
     <div class="common">
     
     <nav class="navbar navbar-default">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>   
-        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-        
-      </ul>
+        <a href="index.html">Main</a>  
+        <a href="contact.html">Contacts<span class="sr-only">(current)</span></a>
     </nav>
     
   <div class="container">     
@@ -99,6 +96,18 @@
      
     </ul>
   </div>
+  
+  <div class="btn-group" data-toggle="buttons">
+  <label class="btn btn-primary">
+          <input type="checkbox"> Параметр 1
+        </label>
+  <label class="btn btn-primary">
+          <input type="checkbox"> Параметр 2
+        </label>
+  <label class="btn btn-primary">
+          <input type="checkbox"> Параметр 3
+        </label>
+</div>
   
   <nav>
     <ul class="pager">
