--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,8 @@
     <div class="common">
     
     <nav class="navbar navbar-default">
-      <ul class="nav navbar-nav">   
-        <li class="active"><a href="index.html">Main <span class="sr-only">(current)</span></a></li>
-        <li><a href="contact.html">Contacts</a></li>
-      </ul>
+        <a href="index.html">Main <span class="sr-only">(current)</span></a>
+        <a href="contact.html">Contacts</a>
     </nav>
     
   <div class="container">     
@@ -76,6 +74,18 @@
   </div>
   
   </div>
+  
+  <div class="btn-group" data-toggle="buttons">
+  <label class="btn btn-primary">
+          <input type="checkbox"> Параметр 1
+        </label>
+  <label class="btn btn-primary">
+          <input type="checkbox"> Параметр 2
+        </label>
+  <label class="btn btn-primary">
+          <input type="checkbox"> Параметр 3
+        </label>
+</div>
   
   <nav>
     <ul class="pager">
