--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,12 +11,7 @@
     <link href="../static/css/style.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <!--<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
-    <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
-    <![endif]-->
+
   </head>
 
   <body>
@@ -48,9 +43,9 @@
       <div class="jumbotron">
         <div class="media">
             <div class="row">
-              <div class="col-sm-6 col-md-4">
+              <div class="col-sm-8 col-md-6">
                 <div class="thumbnail">
-                  <h3 class="title">Founder</h3>
+                  <h3 class="title"><b>Founder</b></h3>
                   <div class="caption">
                     <div class="img-center">
                       <img class="size-img" src="../static/images/pavel_obod.png" alt="Pavel Obod">
@@ -64,7 +59,7 @@
                   </div>
                 </div>
                 <div class="thumbnail">
-                  <h3 class="title">Director</h3>
+                  <h3 class="title"><b>Director</b></h3>
                   <div class="caption">
                     <div class="img-center">
                       <img class="size-img" src="../static/images/aleksej_radchenko.png" alt="Aleksej Radchenko">
@@ -78,17 +73,17 @@
                   </div>
                 </div>
                 <div class="thumbnail">
-                  <h3 class="title">Manager</h3>
+                  <h3 class="title"><b>Manager</b></h3>
                   <div class="caption">
                     <div class="img-center">
                       <img class="size-img" src="../static/images/daria_mykhalevych.png" alt="Daria Mykhalevych">
                     </div>
-                    <div class="thumbnail-text">
+                    <p class="thumbnail-text">
                       <p>Name: Daria Mykhalevych</p>
                       <p>Email: daria.mykhalevych@gmail.com</p>
                       <p>Skype: darka.darka.darka.darka.</p>
-                      <p>Phone: +38 (096) 469-15-57</p>
-                    </div>
+                      <p>Phone: +38 (096) 469-15-57>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -97,9 +92,6 @@
       </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-    <!--Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
