--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,7 @@
     <link href="../static/css/style.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <!--<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
-    <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
-    <![endif]-->
+
   </head>
 
   <body>
@@ -44,13 +39,9 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="row-header">
-      <h2>PyBursa</h2>
-    </div>
-
     <div class="container">
       <div class="jumbotron">
-        <h2 class="media-heading">Description</h2>
+        <h2 class="media-heading"><b>Description</b></h2>
         <h4 class="media-text">
           Если ты стремишься получить профессию, которая позволит путешествовать, воплощать невероятные
           идеи в жизнь, получать достойную заработную плату и работать в комфортном офисе - добро
@@ -64,22 +55,20 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h2 class="media-heading">Program</h2>
-          <h4 class="media-text">
-            <p>...</p>
-            <p>...</p>
-            <p>...</p>
-            <p>...</p>
-          </h4>
+        <h2 class="media-heading"><b>Program</b></h2>
+          <div class="program-text">
+            <p>1 - Основы Python</p>
+            <p>2 - Работа с Git</p>
+            <p>3 - Django</p>
+            <p>4 - Тестирование</p>
+          </div>
+
         <div class="btn-center">
           <p><a class="btn btn-primary btn-lg" href="http://www.itbursa.com/pybursa.com" target="_blank" role="button">Learn more</a></p>
         </div>
       </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
