Taking design crap away v1.1

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,3 +74,14 @@ body {
 #PhoneDes {
     color:black;
 }
+
+li#n1 {}
+li#n2 {}
+li#n3 {}
+li#n4 {}
+li#n5 {}
+li#n6 {}
+li#n7 {}
+li#n8 {}
+li#n9 {}
+li#n10 {}
