--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="index.html">Main</a></li>
               <li><a href="contact.html">Contacts</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
@@ -72,6 +72,18 @@ Ad vim dico definitiones. Ius stet ancillae tincidunt ne, appareat appetere glor
 Ut justo malis vocent mel, graecis dissentiet concludaturque ut sea. Nam nemore honestatis contentiones in. Per ne dicta placerat torquatos. No nam decore regione antiopam, recusabo mediocrem prodesset nam ut. Lorem docendi at cum.
 
 Nam ne copiosae delicata, id latine ornatus inciderint vel, eam ad modus inani necessitatibus. Ius tota adipisci inimicus ne, te utinam ponderum mea. Nec ex porro sanctus, ne duo minim utroque. Duo inani aliquam ne. Ut has audiam principes, purto utamur ea est.</p>
+     <ol>
+        <li id="n1">Lorem ipsum</li>
+        <li id="n2">Lorem ipsum</li>
+        <li id="n3">Lorem ipsum</li>
+        <li id="n4">Lorem ipsum</li>
+        <li id="n5">Lorem ipsum</li>
+        <li id="n6">Lorem ipsum</li>
+        <li id="n7">Lorem ipsum</li>
+        <li id="n8">Lorem ipsum</li>
+        <li id="n9">Lorem ipsum</li>
+        <li id="n10">Lorem ipsum</li>
+    </ol>
       </div>
     </div>
 
