--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li><a href="index.html">Main</a></li>
-              <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="contact.html">Contacts</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
