--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,8 +18,8 @@
     <div class="common">
     
     <nav class="navbar navbar-default">
-        <a href="index.html">Main</a>  
-        <a href="contact.html">Contacts<span class="sr-only">(current)</span></a>
+        <a href="index.html">Main</a>
+        <a href="contact.html">Contacts</a>
     </nav>
     
   <div class="container">     
