--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <div class="common">
     
     <nav class="navbar navbar-default">
-        <a href="index.html">Main <span class="sr-only">(current)</span></a>
+        <a href="index.html">Main</a>
         <a href="contact.html">Contacts</a>
     </nav>
     
