--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
     <!--meta name="author" content=""-->
     <link rel="icon" href="../../favicon.ico">
 
-    <title>PyBursa</title>
+    <title>Contacts</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <!--link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"-->
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/theme.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -48,7 +48,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li> <a href="index.html">Home</a></li>            
+            <li> <a href="index.html">Main</a></li>            
             <li class="active"><a href="#">Contacts</a></li>
             
           </ul>
@@ -84,22 +84,22 @@
   <address>
       <strong>Director Name: Павел Обод</strong><br />
       <abbr title="Phone">P: </abbr> (123) 456-7890 <br />
-      <abbr title="Skype">S: </abbr><a href="skype:#">skype</a> <br />
-      <abbr title="Email">E: </abbr><a href="mailto:#">pybursa@gmail.com</a>
+      <abbr title="skype">S: </abbr><a href="skype: pybursa">skype</a> <br />
+      <abbr title="email">E: </abbr><a href="mailto: pybursa@gmail.com">pybursa@gmail.com</a>
   </address>
 
     <address>
       <strong>Manager Name: Дария Михалевич</strong><br />
       <abbr title="Phone">P: </abbr> (123) 456-7890 <br />
-      <abbr title="Skype">S: </abbr><a href="skype:#">skype</a> <br />
-      <abbr title="Email">E: </abbr><a href="mailto:#">pybursa@gmail.com</a>
+      <abbr title="skype">S: </abbr><a href="skype: pybursa">skype</a> <br />
+      <abbr title="email">E: </abbr><a href="mailto: pybursa@gmail.com">pybursa@gmail.com</a>
   </address>
 
   <address>
       <strong>Founder Name: Алексей Радченко</strong><br />
       <abbr title="Phone">P: </abbr> (123) 456-7890 <br />
-      <abbr title="Skype">S: </abbr><a href="skype:#">skype</a> <br />
-      <abbr title="Email">E: </abbr><a href="mailto:#">pybursa@gmail.com</a>
+      <abbr title="skype">S: </abbr><a href="skype: pybursa">skype</a> <br />
+      <abbr title="email">E: </abbr><a href="mailto: pybursa@gmail.com">pybursa@gmail.com</a>
   </address>
 
       <br />
