--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <!--link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"-->
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/theme.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -48,7 +48,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>            
+            <li class="active"><a href="#">Main</a></li>            
             <li><a href="contact.html">Contacts</a></li>
             
           </ul>
