--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,2 @@
 ﻿.title {color:blue}
+#ind_kurs_descr, #ind_t1, #ind_lnk1, #ind_lnk2, #ind_lnk3, #ind_descr, #ind_text_cont, #ind_tab_kont, #ind_tab_head, #ind_tab_name{}
