--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,8 +10,10 @@
     <title>Контактная информация</title>
     <link href="../static/css/style.css" rel="stylesheet">
 
+    <script src="../static/js/jquery-2.2.2.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
 
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
    </head>
 
   <body>
@@ -25,12 +27,13 @@
       </ul>
     </div>
 
-        <h2 class='title'>Контактная информация</h2>
+        <h2 class="page-header">Контактная информация</h2>
  
-      <div class="container">
-	<h3>Director</h3>
+      <div  class="panel panel-default">
+	<div class="panel-heading"><h2> <span class="label label-primary">Director</span></h2></div>
+	
 
-        <table class='table' style="width:300px">
+        <table class='table table-hover' style="width:300px">
           <tbody >
 	  <tr>  <td>Name:  </td> 
 	    <td>Aleksey Radchenko</td> 
@@ -50,7 +53,7 @@
       </div>
 <br>
       <div class="container">
-	<h3>Manager</h3>
+	<h3><span class="label label-primary">Manager</span></h3>
         <table class='table' style="width:300px">
           <tbody >
 	  <tr>  <td>Name:  </td> 
@@ -71,7 +74,7 @@
       </div>
    <br>
       <div class="container">
-	<h3>Founder</h3>
+	<h3><span class="label label-primary">Founder</span></h3>
         <table class='table' style="width:300px">
           <tbody >
 	  <tr>  <td>Name:  </td> 
