--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="">
 
     <title>Главная. Описание курса PyBursa</title>
+    <script src="../static/js/jquery-2.2.2.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
 
     <link href="../static/css/style.css" rel="stylesheet">
 
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-	.title {color:blue}
-    </style> 	
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
+
    </head>
 
   <body>
@@ -23,31 +23,31 @@
 
     <div class="container">
       <ul class="nav nav-tabs">
-  	<li role="presentation" ><a href="index.html">ItBursa</a></li>
-  	<li role="presentation" class="active"><a href="#">Main</a></li>
-  	<li role="presentation"><a href="contact.html">Contacts</a></li>
+  	<li role="presentation" id="ind_lnk1"><a href="index.html">ItBursa</a></li>
+  	<li role="presentation" id="ind_lnk2" class="active"><a href="#">Main</a></li>
+  	<li role="presentation" id="ind_lnk3"><a href="contact.html">Contacts</a></li>
       </ul>
 </div>
 
-    <div class="container">
+    <div id="ind_text_cont" class="container">
  
       <div >
 
-        <h1 class='title'>PyBursa</h1><br>
+        <h1 class="page-header">PyBursa</h1><br>
 
-        <h2 class='title'>Description</h2>
-        <p >Курс нацелен на базовое обучение языку программирования Python и введение в Web Framework Jango<br><br> </p>
+        <h2 class='title' id="ind_descr">Description</h2>
+        <p id='ind_kurs_descr'>Курс нацелен на базовое обучение языку программирования Python и введение в Web Framework Jango<br><br> </p>
       </div>
     </div>  
 
 
-      <div class="container">
-        <h2 class='title'>Programm</h2>
-        <table class='table'>
+      <div id="ind_tab_kont"class="container">
+        <h2><span id ="ind_tab_name" class='title'>Programm</span></h2>
+        <table id="ind_t1" class="table table-striped">
           <tbody>
-          <tr>
-            <th>
-              ЗАНЯТИЕ
+          <tr id="ind_tab_head">
+            <th >
+             ЗАНЯТИЕ
             </th>
             <th>
               ТЕМА
@@ -402,7 +402,5 @@
     </div><!-- /.container -->
     </div>
 
-    <script src="../static/js/jquery-2.2.2.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
