--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,17 +17,6 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                  data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://www.itbursa.com/pybursa.com" target="_blank">PyBursa</a>
-        </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -52,8 +41,8 @@
                     </div>
                     <div class="thumbnail-text">
                       <p>Name: Pavel Obod</p>
-                      <p>Email: itbursa100@gmail.com</p>
                       <p>Skype: azaless</p>
+                      <p>Email: itbursa100@gmail.com</p>
                       <p>Phone: +38 (096) 469-15-56</p>
                     </div>
                   </div>
@@ -66,8 +55,8 @@
                     </div>
                     <div class="thumbnail-text">
                       <p>Name: Aleksej Radchenko</p>
-                      <p>Email: dixon-che@gmail.com</p>
                       <p>Skype: dixon.che</p>
+                      <p>Email: dixon-che@gmail.com</p>
                       <p>Phone: +38 (096) 469-15-58</p>
                     </div>
                   </div>
@@ -80,8 +69,8 @@
                     </div>
                     <p class="thumbnail-text">
                       <p>Name: Daria Mykhalevych</p>
-                      <p>Email: daria.mykhalevych@gmail.com</p>
                       <p>Skype: darka.darka.darka.darka.</p>
+                      <p>Email: daria.mykhalevych@gmail.com</p>
                       <p>Phone: +38 (096) 469-15-57>
                     </p>
                   </div>
@@ -91,7 +80,9 @@
         </div>
       </div>
     </div>
-
+        <div class="pybursa-logo">
+      <h6>@ 2016 PyBursa</h6>
+    </div>
     <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
