--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+.page-header
+{
+    text-align: center;
+}
 .row-header
 {
     text-align: center;
@@ -16,7 +20,7 @@
 .media-heading
 {
     text-align: center;
-    
+
 }
 .media-text
 {
@@ -55,4 +59,8 @@
 .program-text
 {
     text-align: left;
+}
+.pybursa-logo
+{
+    text-align: center;
 }
