--- a/templates/index.html
+++ b/templates/index.html
@@ -17,17 +17,6 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                  data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://www.itbursa.com/pybursa.com" target="_blank">PyBursa</a>
-        </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,6 +29,10 @@
     </nav>
 
     <div class="container">
+
+      <div class="page-header">
+        <h1>Профессиональные курсы <b>"PyBursa"</b></h1>
+      </div>
       <div class="jumbotron">
         <h2 class="media-heading"><b>Description</b></h2>
         <h4 class="media-text">
@@ -67,6 +60,10 @@
           <p><a class="btn btn-primary btn-lg" href="http://www.itbursa.com/pybursa.com" target="_blank" role="button">Learn more</a></p>
         </div>
       </div>
+    </div>
+
+    <div class="pybursa-logo">
+      <h6>@ 2016 PyBursa</h6>
     </div>
 
     <script src="../static/js/bootstrap.js"></script>
