--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
       <ul class="nav nav-tabs">
   	<li role="presentation" ><a href="index.html">ItBursa</a></li>
   	<li role="presentation" ><a href="index.html">Main</a></li>
-  	<li role="presentation" class="active"><a href="#">Contacts</a></li>
+  	<li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
       </ul>
     </div>
 
