--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,10 @@
   <body>
     <div class="container">
 
-    <div class="container">
+    <div class="container-fluid">
       <ul class="nav nav-tabs">
   	<li role="presentation" id="ind_lnk1"><a href="index.html">ItBursa</a></li>
-  	<li role="presentation" id="ind_lnk2" class="active"><a href="#">Main</a></li>
+  	<li role="presentation" id="ind_lnk2" class="active"><a href="index.html">Main</a></li>
   	<li role="presentation" id="ind_lnk3"><a href="contact.html">Contacts</a></li>
       </ul>
 </div>
@@ -32,9 +32,8 @@
     <div id="ind_text_cont" class="container">
  
       <div >
-
-        <h1 class="page-header">PyBursa</h1><br>
-
+	<div class="row"><div class="col-md-5"></div><div class="col-md-2"> <h1 class="page-header">PyBursa</h1></div></div>
+<br>
         <h2 class='title' id="ind_descr">Description</h2>
         <p id='ind_kurs_descr'>Курс нацелен на базовое обучение языку программирования Python и введение в Web Framework Jango<br><br> </p>
       </div>
@@ -42,11 +41,11 @@
 
 
       <div id="ind_tab_kont"class="container">
-        <h2><span id ="ind_tab_name" class='title'>Programm</span></h2>
+        <h2 id ="ind_tab_name" class='title'>Programm</h2>
         <table id="ind_t1" class="table table-striped">
           <tbody>
           <tr id="ind_tab_head">
-            <th >
+            <th class="tab_head_col">
              ЗАНЯТИЕ
             </th>
             <th>
