--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+            <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -33,8 +33,10 @@
       <div class="page-header">
         <h1>Профессиональные курсы <b>"PyBursa"</b></h1>
       </div>
+      <div class="media-heading">
+        <h2><b>Description</b></h2>
+      </div>
       <div class="jumbotron">
-        <h2 class="media-heading"><b>Description</b></h2>
         <h4 class="media-text">
           Если ты стремишься получить профессию, которая позволит путешествовать, воплощать невероятные
           идеи в жизнь, получать достойную заработную плату и работать в комфортном офисе - добро
@@ -46,16 +48,17 @@
       </div>
     </div>
 
+    <div class="media-heading">
+      <h2><b>Program</b></h2>
+    </div>
     <div class="container">
       <div class="jumbotron">
-        <h2 class="media-heading"><b>Program</b></h2>
-          <div class="program-text">
-            <p>1 - Основы Python</p>
-            <p>2 - Работа с Git</p>
-            <p>3 - Django</p>
-            <p>4 - Тестирование</p>
-          </div>
-
+        <div class="program-text">
+          <p>1 - Основы Python</p>
+          <p>2 - Работа с Git</p>
+          <p>3 - Django</p>
+          <p>4 - Тестирование</p>
+        </div>
         <div class="btn-center">
           <p><a class="btn btn-primary btn-lg" href="http://www.itbursa.com/pybursa.com" target="_blank" role="button">Learn more</a></p>
         </div>
