--- a/templates/index.html
+++ b/templates/index.html
@@ -63,12 +63,7 @@
       <div class="panel panel-primary">
         <div class="panel-heading"><h1>PyBursa<img src="../static/images/itburs.png"></h1></div>
          <div class="panel-body">
-           <p class="muted"> Лучшие курсы PYTHON</p>
-          <a class="btn btn-lg btn-primary" href="google.com" role="button">Посмотреть наши контакты &raquo;</a>
-         </div>
-        </div>
-     
-    
+  
       <div class="panel panel-info">
           <div class="panel-heading"><h2>Description</h2></div>
           <div class="panel-body">
@@ -82,6 +77,9 @@
           трудно собрать общую картину.</p>
         </div>
       </div>
+                <p class="btn btn-lg btn-primary" role="button">Посмотреть наши контакты &raquo;</p>
+               </div>
+        </div>
 
     <div class="panel panel-success">
   <!-- Default panel contents -->
