--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,3 +62,10 @@ background-color:#DCDCDC;}
 .panel-info .panel-body{
 background-color: #696969;}
 
+#footer_header{
+color: #20B2AA;}
+
+.dropdown-menu li, .dropdown ul {
+background-color:#E6E6FA;}
+
+
