--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,20 +10,20 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Contacts PyBursa</title>
 
     <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
 
+      <script src="../static/js/bootstrap.js"></script>
+      <script src="../static/js/bootstrap.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -51,7 +51,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href="index.html">Main</a></li>
-              <li class="active"><a href="contact.html">Contact</a></li>
+              <li  class="active"><a href ="contact.html">Contacts</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -73,15 +73,29 @@
     <h3 class="panel-title">Director</h3>
   </div>
   <div class="panel-body director">
-      <ul>
+  <div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Director
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li>      
+    <ul>
       <li>Name: Татьяна Орехова</li>
       <li>Skype: Tatyana_Oriekhova</li>
       <li>Email: to096540848@gmail.com</li>
       <li>Phone: +38 099 186 64 75</li>
-    </ul>
+    </ul></li>
+  </ul>
+</div>
   </div>
   </div>
   </div><!-- /.col-lg-4 -->
+
+
+
+
+
   <div class="col-lg-4">
  <img class="img-circle" src="../static/images/py.jpg" alt="Generic placeholder image" width="100" height="100">
     <div class="panel panel-default">
@@ -120,7 +134,7 @@
    
 
       <!-- FOOTER -->
-      <footer>
+      <footer id = "footer_header">
         <p>&copy; 2016 Company, Inc. &middot; </p>
       </footer>
   <!-- Bootstrap core JavaScript
@@ -128,11 +142,11 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <script src="../static//js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
 
