--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,6 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="navbar.css" rel="stylesheet">
@@ -53,7 +51,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Main</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.html">Contacts</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
