--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 
 
       <div id="ind_tab_kont"class="container">
-        <h2 id ="ind_tab_name" class='title'>Programm</h2>
+        <h2 id ="ind_tab_name" class='title'>Program</h2>
         <table id="ind_t1" class="table table-striped">
           <tbody>
           <tr id="ind_tab_head">
