Add Bootstrap classes

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,12 +6,14 @@
 	<title>Contact</title>
 	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../static/css/style.css" rel="stylesheet">
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">PYBURSA</a>
+      <a class="navbar-brand" href="index.html">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="index.html">Main</a></li>
@@ -19,37 +21,52 @@
     </ul>
   </div>
 </nav>
-<div>
+<div class="container">
+<div class="text-center">
 	<h1>Contacts</h1>
 </div>
 <div>
 	<div>
 		<h3>Director</h3>
-		  <div>
- 				Name: Ivan Ivanov <br>
- 				Skype: ivan2016 <br>
- 				Email: ivan2016@gmail.com <br>
- 				Phone: +380671111111<br>
- 		  </div>
+			  
+ 		 <dl class="dl-horizontal">
+    		<dt>Name</dt>
+    			<dd> <span class="glyphicon glyphicon-user"></span> Ivan Ivanov</dd>
+    		<dt>Skype</dt>
+    			<dd><span class="glyphicon glyphicon-headphones"></span> ivan2016</dd>
+    		<dt>Email</dt>
+    			<dd><span class="glyphicon glyphicon-envelope"></span> ivan2016@gmail.com </dd>
+    		<dt>Phone</dt>
+    			<dd> <span class="glyphicon glyphicon-phone"></span> +380671111111</dd>	
+    	 </dl>       
 	</div>
 	<div>
 		<h3>Manager</h3>
-		  <div>
- 				Name: Petr Petrov <br>
- 				Skype: petr2016 <br>
- 				Email: petr2016@gmail.com <br>
- 				Phone: +380672222222<br>
- 		  </div>
+		  <dl class="dl-horizontal">
+    		 <dt>Name</dt>
+    			<dd><span class="glyphicon glyphicon-user"></span> Petr Petrov </dd>
+    		 <dt>Skype</dt>
+    			<dd><span class="glyphicon glyphicon-headphones"></span> petr2016</dd>
+    		 <dt>Email</dt>
+    			<dd><span class="glyphicon glyphicon-envelope"></span> petr2016@gmail.com</dd>
+    		 <dt>Phone</dt>
+    			<dd><span class="glyphicon glyphicon-phone"></span> +380672222222</dd>	
+    	  </dl>       
 	</div>
 	<div>
 		<h3>Founder</h3>
-		  <div>
- 				Name: Alex Alexseev <br>
- 				Skype: alex2016 <br>
- 				Email: alex2016@gmail.com <br>
- 				Phone: +380677777777<br>
- 		  </div>
+		 <dl class="dl-horizontal">
+    		<dt>Name</dt>
+    			<dd>  <span class="glyphicon glyphicon-user"></span> Alex Alexseev</dd>
+    		<dt>Skype</dt>
+    			<dd><span class="glyphicon glyphicon-headphones"></span> alex2016</dd>
+    		<dt>Email</dt>
+    			<dd><span class="glyphicon glyphicon-envelope"></span> alex2016@gmail.com</dd>
+    		<dt>Phone</dt>
+    			<dd><span class="glyphicon glyphicon-phone"></span> +380677777777</dd>	
+    	 </dl>       
 	</div>
+</div>
 </div>
 </body>
 </html>
