--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,14 @@
 	<title>PyBursa</title>
 	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../static/css/style.css" rel="stylesheet">
-
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">PYBURSA</a>
+      <a class="navbar-brand" href="index.html">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Main</a></li>
@@ -20,29 +21,34 @@
     </ul>
   </div>
 </nav>
-<div>
-<h1>Курс Python & Django от PyBursa</h1>
-<h2>Description</h2>
-<div>
-<p>Курс <span>Python & Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span>Python</span>>
-и хотят освоить этот язык на профессиональном уровне для web-разработки. 
-</p>
-<p>В этом курсе акцент сделан на изучение популярного web-фреймворка  <span>Django</span>. 
-Используя <span>Django</span>, вы сможете значительно ускорить процесс web-разработки, создавать мощные и высоконагрузочные web-приложения.
-</p>
-<p>
-После обучения в этом курсе вы сможете легко претендовать на позицию <span>"Junior web developer"</span> в ведущих IT-компаниях.
-</p>
+<div class="container">
+  	<div class="page-header text-right">
+  		<h1 >Курсы Python/Django от Pybursa</h1>
+   </div>
+   <div class="text-uppercase text-right">	
+		<h2>Description</h2>
+	</div>
+	<div class="jumbotron">
+		<p>Курс <span>Python & Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span>Python</span>>
+			и хотят освоить этот язык на профессиональном уровне для web-разработки. 
+		</p>
+		<p>В этом курсе акцент сделан на изучение популярного web-фреймворка  <span>Django</span>. 
+			Используя <span class="">Django</span>, вы сможете значительно ускорить процесс web-разработки, создавать мощные и высоконагрузочные web-приложения.
+		</p>
+		<p>
+			После обучения в этом курсе вы сможете легко претендовать на позицию <span>"Junior web developer"</span> в ведущих IT-компаниях.
+		</p>
+	</div>
+	<div class="text-uppercase text-right">
+		<h2>Program</h2>
+	</div>
+	<div  class="lead">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+			aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+	</div>	
 </div>
-<div> 
-<h2>Program</h2>
-<div>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
-</div>
-</div>
-
 </body>
 </html>
