--- a/templates/index.html
+++ b/templates/index.html
@@ -22,14 +22,12 @@
   </div>
 </nav>
 <div class="container">
-  	<div class="page-header text-right">
-  		<h1 >Курсы Python/Django от Pybursa</h1>
-   </div>
-   <div class="text-uppercase text-right">	
-		<h2>Description</h2>
+  	<div>
+  		<h1 class="page-header text-right">Курсы Python/Django от Pybursa</h1>
+  		<h2 class="text-uppercase text-right">Description</h2>
 	</div>
-	<div class="jumbotron">
-		<p>Курс <span>Python & Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span>Python</span>>
+	<div class="jumbotron text-justify">
+		<p>Курс <span>Python/Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span>Python</span>>
 			и хотят освоить этот язык на профессиональном уровне для web-разработки. 
 		</p>
 		<p>В этом курсе акцент сделан на изучение популярного web-фреймворка  <span>Django</span>. 
@@ -48,7 +46,13 @@
 			aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
-	</div>	
+	</div>
+	<ul class="pager">
+        <li class="next"><a href="contact.html">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
+   </ul>	
+   <div class="panel panel-default text-center">
+    <div class="panel-footer">@Pybursa2016</div>
+  </div>
 </div>
 </body>
 </html>
