Fix structure in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,8 @@
   </div>
 </nav>
 <div class="container">
-  	<div>
-  		<h1 class="page-header text-right">Курсы Python/Django от Pybursa</h1>
-  		<h2 class="text-uppercase text-right">Description</h2>
-	</div>
+  	<h1 class="page-header text-right">Курсы Python/Django от Pybursa</h1>
+  	<h2 class="text-uppercase text-right">Description</h2>
 	<div class="jumbotron text-justify">
 		<p>Курс <span>Python/Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span>Python</span>>
 			и хотят освоить этот язык на профессиональном уровне для web-разработки. 
@@ -37,9 +35,7 @@
 			После обучения в этом курсе вы сможете легко претендовать на позицию <span>"Junior web developer"</span> в ведущих IT-компаниях.
 		</p>
 	</div>
-	<div class="text-uppercase text-right">
-		<h2>Program</h2>
-	</div>
+	<h2 class="text-uppercase text-right">Program</h2>
 	<div  class="lead">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
