--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -25,6 +25,42 @@
 </nav>
 
  <div class="container">
+    <h1 class="head1">Doe John</h1>  
+    <img src="../static/images/python2016.jpg" alt="portrait">
+    <h2 class="head2">Студент о себе</h2>
+    <h3 class="head3">Student's card</h3>
+    <table class="table table-bordered">
+    <tbody>
+      <tr>
+        <td class="td_red">Surname</td>
+        <td>Doe</td>
+      </tr>
+      <tr>
+        <td class="td_red">Name</td>
+        <td>John</td>
+      </tr>
+      <tr>
+        <td class="td_red">Patronymic</td>
+        <td>Mark</td>
+      </tr>
+      <tr>
+        <td class="td_red">Birth Date</td>
+        <td>06.05.1977</td>
+      </tr>
+      <tr>
+        <td class="td_red">Address</td>
+        <td>USA, Dover 34, ap.56</td>
+      </tr>
+      <tr>
+        <td class="td_red">E-mail</td>
+        <td>johndoe@gmail.com</td>
+      </tr>
+      <tr>
+        <td class="td_red">Skype</td>
+        <td>john_doe</td>
+      </tr>
+    </tbody>
+  </table>
  <ul class="pager">
     <li class="previous"><a href="student_list.html"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
  </ul>
