--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -23,8 +23,58 @@
     </ul>
   </div>
 </nav>
-
- <div class="container">
+<div class="container">
+        <h1 class="head1">Студенты курса PyBursa</h1> 
+ 		  <p>Ниже представлен список студентов этого года</p>
+ <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>Surname</th>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Skype</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="success">
+        <td><a href="student_detail.html">1</a></td>
+        <td><a href="student_detail.html">Doe</a></td>	
+        <td><a href="student_detail.html">John</a></td>
+        <td><a href="student_detail.html">USA, Dover 34, ap.56</a></td>
+        <td><a href="student_detail.html">john_doe</a></td>
+      </tr>
+      <tr class="active">
+      	<td>2</td>
+        <td>Moe</td>
+        <td>Mary</td>
+        <td>Canada, Monreal 23, ap.2 </td>
+        <td>mary_moe</td>
+      </tr>
+      <tr class="info">
+      	<td>3</td>
+        <td>Dooley</td>
+        <td>July</td>
+        <td>England, London 212, ap.B</td>
+        <td>july_dooley</td>
+      </tr>
+      <tr class="warning">
+      	<td>4</td></td>
+        <td>Jones</td>
+        <td>Jane</td>
+        <td>England, Dover 12, ap.A</td>
+        <td>jane_jones</td>
+      </tr>
+      <tr class="danger">
+      	<td>5</td>
+        <td>Crosby</td>
+        <td>Ben</td>
+        <td>Ukraine, Kiev 212, ap.234</td>
+        <td>ben_crosby</td>
+      </tr>
+    </tbody>
+  </table>		  
+ 		  
  <ul class="pager">
     <li class="previous"><a href="contact.html"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
     <li class="next"><a href="student_detail.html">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
