--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -29,7 +29,7 @@
     <img src="../static/images/python2016.jpg" alt="portrait">
     <h2 class="head2">Студент о себе</h2>
     <h3 class="head3">Student's card</h3>
-    <table class="table table-bordered">
+    <table class="table table-bordered table_bg1">
     <tbody>
       <tr>
         <td class="td_red">Surname</td>
@@ -61,6 +61,57 @@
       </tr>
     </tbody>
   </table>
+<h3 class="head3">Perfomance</h3>  
+<table class="table table-condensed table_bg2">
+    <thead>
+      <tr class="td_red">
+        <th>Course</th>
+        <th>Week</th>
+        <th>Control Type</th>
+        <th>Average Grade</th>
+        <th>Rating</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Py101</td>
+        <td>Week1</td>
+        <td>Tests</td>
+        <td>99%</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td>Problem Task №1</td>
+        <td>100%</td>
+        <td>4</td>
+      </tr>
+      <tr>
+         <td></td>
+        <td></td>
+        <td>Problem Task №2</td>
+        <td>98%</td>
+        <td>7</td>
+      </tr>
+      <tr>
+      <td></td>
+        <td>Week1</td>
+        <td>Tests</td>
+        <td>90%</td>
+        <td>2</td>
+       </tr>
+       <tr>
+         <td></td>
+        <td></td>
+        <td>Problem Task №1</td>
+        <td>100%</td>
+        <td>5</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  
  <ul class="pager">
     <li class="previous"><a href="student_list.html"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
  </ul>
