--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="description" content="Contact">
 	<title>Contact</title>
-	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../static/css/style.css" rel="stylesheet">
-	<script src="../static/js/bootstrap.min.js"></script>
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=PT+Serif+Caption&subset=latin,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
 </head>
@@ -17,9 +17,9 @@
       <a class="navbar-brand" href="index.html">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="index.html">Main</a></li>
-      <li class="active"><a href="contact.html">Contacts</a></li>
-      <li><a href="student_list.html">Students</a></li>
+      <li><a href="{% url 'index' %}">Main</a></li>
+      <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+      <li><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
   </div>
 </nav>
@@ -70,8 +70,8 @@
 	</div>
 </div>
  <ul class="pager">
-    <li class="previous"><a href="index.html"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
-    <li class="next"><a href="student_list.html">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
+    <li class="previous"><a href="{% url 'index' %}"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
+    <li class="next"><a href="{% url 'student_list' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
  </ul>
  <div class="panel panel-default text-center">
      <div class="panel-footer"> © 2016 PyBursa V Pikalova</div>
