--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
    <meta charset="utf-8">
 	<meta name="description" content="PyBursa">
 	<title>PyBursa</title>
-	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../static/css/style.css" rel="stylesheet">
-	<script src="../static/js/bootstrap.min.js"></script>
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 
@@ -18,9 +18,9 @@
       <a class="navbar-brand" href="index.html">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Main</a></li>
-      <li><a href="contact.html">Contacts</a></li>
-      <li><a href="student_list.html">Students</a></li>
+      <li class="active"><a href="{% url 'index' %}">Main</a></li>
+      <li><a href="{% url 'contact' %}">Contacts</a></li>
+      <li><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
   </div>
 </nav>
@@ -42,7 +42,7 @@
     </div>
     <div class="container">
     <ul class="pager">
-        <li class="next"><a href="contact.html">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
+        <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
    </ul>	
     <div>
     	<div class="panel panel-default text-center">
