--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,9 +5,9 @@
    <meta charset="utf-8">
 	<meta name="description" content="PyBursa">
 	<title>Deatils</title>
-	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../static/css/style.css" rel="stylesheet">
-	<script src="../static/js/bootstrap.min.js"></script>
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
@@ -17,16 +17,16 @@
       <a class="navbar-brand" href="index.html">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="index.html">Main</a></li>
-      <li><a href="contact.html">Contacts</a></li>
-      <li><a href="student_list.html">Students</a></li>
+      <li><a href="{% url 'index' %}">Main</a></li>
+      <li><a href="{% url 'contact' %}">Contacts</a></li>
+      <li><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
   </div>
 </nav>
 
  <div class="container">
     <h1 class="head1">Doe John</h1>  
-    <img src="../static/images/python2016.jpg" alt="portrait">
+    <img src="{% static 'images/python2016.jpg' %}" alt="portrait">
     <h2 class="head2">Студент о себе</h2>
     <h3 class="head3">Student's card</h3>
     <table class="table table-bordered table_bg1">
@@ -113,7 +113,7 @@
   
   
  <ul class="pager">
-    <li class="previous"><a href="student_list.html"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
+    <li class="previous"><a href="{% url 'student_list' %}"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
  </ul>
     <div class="panel panel-default text-center">
           <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
