--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -5,9 +5,9 @@
    <meta charset="utf-8">
 	<meta name="description" content="PyBursa">
 	<title>List</title>
-	<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../static/css/style.css" rel="stylesheet">
-	<script src="../static/js/bootstrap.min.js"></script>
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
@@ -17,9 +17,9 @@
       <a class="navbar-brand" href="index.html">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="index.html">Main</a></li>
-      <li><a href="contact.html">Contacts</a></li>
-      <li class="active"><a href="student_list.html">Students</a></li>
+      <li><a href="{% url 'index' %}">Main</a></li>
+      <li><a href="{% url 'contact' %}">Contacts</a></li>
+      <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
   </div>
 </nav>
@@ -38,11 +38,11 @@
     </thead>
     <tbody>
       <tr class="success">
-        <td><a href="student_detail.html">1</a></td>
-        <td><a href="student_detail.html">Doe</a></td>	
-        <td><a href="student_detail.html">John</a></td>
-        <td><a href="student_detail.html">USA, Dover 34, ap.56</a></td>
-        <td><a href="student_detail.html">john_doe</a></td>
+        <td><a href="{% url 'student_detail' %}">1</a></td>
+        <td><a href="{% url 'student_detail' %}">Doe</a></td>	
+        <td><a href="{% url 'student_detail' %}">John</a></td>
+        <td><a href="{% url 'student_detail' %}">USA, Dover 34, ap.56</a></td>
+        <td><a href="{% url 'student_detail' %}">john_doe</a></td>
       </tr>
       <tr class="active">
       	<td>2</td>
@@ -76,8 +76,8 @@
   </table>		  
  		  
  <ul class="pager">
-    <li class="previous"><a href="contact.html"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
-    <li class="next"><a href="student_detail.html">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
+    <li class="previous"><a href="{% url 'contact' %}"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
+    <li class="next"><a href="{% url 'student_detail' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
  </ul>
     <div class="panel panel-default text-center">
           <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
