--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
       <li class="active"><a href="{% url 'index' %}">Main</a></li>
       <li><a href="{% url 'contact' %}">Contacts</a></li>
       <li><a href="{% url 'student_list' %}">Students</a></li>
+      <li><a href="{% quadratic 'templates/results' %}">Quadratic</a></li>
     </ul>
   </div>
 </nav>
