--- a/templates/results.html
+++ b/templates/results.html
@@ -1,11 +1,11 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
    <meta charset="utf-8">
 	<meta name="description" content="PyBursa">
-	<title>Quadratic Main</title>
+	<title>Quadratic Equation</title>
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -21,15 +21,35 @@
       <li><a href="{% url 'index' %}">Main</a></li>
       <li><a href="{% url 'contact' %}">Contacts</a></li>
       <li><a href="{% url 'student_list' %}">Students</a></li>
-      <li class="active"><a href="{% url 'quadratic' %}">Quadratic</a></li>
+      <li class="active"><a href="{% url 'results'  %}">Quadratic</a></li>
     </ul>
   </div>
 </nav>
 <div class="container">
 
-Quadratics
-
- 		  
+ <p>Квадратное уравнение a*x*x + b*x + c = 0</p>
+		<ul>
+        <li>{{a.text}}{{a.value}}
+           {% if a_err %}
+        	   <br /><i>  {{a_err}} </i>
+           {% endif %}
+        </li>
+        <li>{{b.text}}{{b.value}}
+           {% if b_err %}
+        	   <br /><i>  {{b_err}} </i>
+           {% endif %}
+        </li>
+        <li>{{c.text}}{{c.value}}
+           {% if c_err %}
+        	   <br /><i>  {{c_err}} </i>
+           {% endif %}
+        </li>
+    </ul>
+    <p>{{disc.message}}{{disc.value}}</p>
+    <p>{{text_result.message}}{{text_result.value}}</p>
+        
+    </div>
+ <div class="container">		  
  <ul class="pager">
     <li class="previous"><a href="{% url 'student_list' %}"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
     <li class="next"><a href="{% url 'student_detail' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
