KZ 5.2 commit admin + index change

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% url 'contact' %}">Contacts</a></li>
-      <li><a href="{% url 'student_list' %}">Students</a></li>
+      <li><a href="{% url 'students:list_view' %}">Students</a></li>
       <li><a href="{% url 'results'  %}">Quadratic</a></li>
     </ul>
   </div>
@@ -42,7 +41,8 @@
 		</p>
 	</div>
     </div>
-
+<div class="container">
+<h2 class="head2 text-right">Наши курсы</h2>   
                 <div class="table-responsive">
                     <table class="table table-striped table-hover table-condensed">
                         <thead>
@@ -62,8 +62,7 @@
                     </table>
                 </div>
            
-
-
+</div>>
     <div class="container">
     <ul class="pager">
         <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
