--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -20,8 +20,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% url 'contact' %}">Contacts</a></li>
-      <li><a href="{% url 'students:list_view' %}{% block course_students %}?course_id={{ course.id }}{% endblock course_students %}">Students</a></li>
+      <li><a href="{% block course_students %}?course_id={{ course.id }}{% endblock course_students %}">Students</a></li>
       <li><a href="{% url 'results'  %}">Quadratic</a></li>
     </ul>
   </div>
